TrungNT change size modal

--- a/index.html
+++ b/index.html
@@ -182,51 +182,7 @@
                                 by ticktes
                             </button>
 
-                            <!-- Modal -->
-                            <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static"
-                                 data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel"
-                                 aria-hidden="true">
-                                <div class="modal-dialog">
-                                    <div class="modal-content" style="width: 900px; ">
-                                        <div class="header"
-                                             style=" background-color: #009688!important; color: white;padding: 32px; ">
-                                            <div class="text-button " style="text-align: right">
-                                                <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                                        aria-label="Close"></button>
-                                            </div>
-                                            <div class="text-center" style="background:  #009688!important">
-                                                <i class="fa-solid fa-briefcase"></i>
-                                                tickets
-                                            </div>
-                                        </div>
 
-                                        <div class="modal-body">
-                                            <p class="text">
-                                                <i class="fa-solid fa-cart-shopping"></i>
-                                                Tickets, $15 per person
-                                            </p>
-                                            <div class="input-group mb-3">
-                                                <input type="text" class="form-control" placeholder="How many" aria-label="Recipient's username" aria-describedby="basic-addon2">
-                                            </div>
-                                            <p class="text">
-                                                <i class="fa-solid fa-user"></i>
-                                                Send To</p>
-                                            <div class="input-group mb-3">
-                                                <input type="text" class="form-control" placeholder="enter amail" aria-label="Recipient's username" aria-describedby="basic-addon2">
-                                            </div>
-                                        </div>
-                                            <button type="button" class="btn btn-success">
-                                                PAY
-                                                <i class="fa-solid fa-check"></i>
-                                            </button>
-                                        <div class="modal-footer">
-                                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
-                                                Close
-                                            </button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -255,6 +211,51 @@
                     </div>
                 </div>
 
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Modal -->
+<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static"
+     data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel"
+     aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="header"
+                 style=" background-color: #009688!important; color: white;padding: 32px; ">
+                <div class="text-button " style="text-align: right">
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                            aria-label="Close"></button>
+                </div>
+                <div class="text-center" style="background:  #009688!important">
+                    <i class="fa-solid fa-briefcase"></i>
+                    tickets
+                </div>
+            </div>
+
+            <div class="modal-body">
+                <p class="text">
+                    <i class="fa-solid fa-cart-shopping"></i>
+                    Tickets, $15 per person
+                </p>
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" placeholder="How many" aria-label="Recipient's username" aria-describedby="basic-addon2">
+                </div>
+                <p class="text">
+                    <i class="fa-solid fa-user"></i>
+                    Send To</p>
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" placeholder="enter amail" aria-label="Recipient's username" aria-describedby="basic-addon2">
+                </div>
+            </div>
+            <button type="button" class="btn btn-success">
+                PAY
+                <i class="fa-solid fa-check"></i>
+            </button>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+                    Close
+                </button>
             </div>
         </div>
     </div>
