--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <div id="App" style="width: 100%; position: fixed; z-index: 9999">
     <header class="hear-nav">
         <nav class="navbar navbar-expand-lg bg-light" style="padding: 0; margin: 0">
-            <div class="container-fluid">
+            <div class="container-fluid" style="width: 100%">
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item">
@@ -47,8 +47,6 @@
         </nav>
     </header>
 </div>
-
-<slider>
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false" style="padding-top: 40px">
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
@@ -86,7 +84,6 @@
             <span class="visually-hidden">Next</span>
         </button>
     </div>
-</slider>
 
 <div class="content-fluid">
     <div class="content-section">
@@ -134,7 +131,7 @@
         </div>
     </div>
 </div>
-<div class="container-fluid">
+<div class="container-fluid" style= "width:100%">
     <div class="content-section1">
         <div class="section-header">
             <h1>TOUR DATES</h1>
@@ -193,7 +190,11 @@
                             <h5 class="card-title">Paris</h5>
                             <p class="card-text">Fri 27 Nov 2016 <br>Praesent tincidunt sed tellus ut rutrum sed vitae
                                 justo.</p>
-                            <button type="button" class="btn btn-dark">by ticktes</button>
+                            <button type="button" class="btn btn-dark" data-bs-toggle="modal"
+                                    data-bs-target="#staticBackdrop">
+                                by ticktes
+                            </button>
+
                         </div>
                     </div>
                 </div>
@@ -206,7 +207,11 @@
                             </h5>
                             <p class="card-text">Fri 27 Nov 2016 <br>Praesent tincidunt sed tellus ut rutrum sed vitae
                                 justo.</p>
-                            <button type="button" class="btn btn-dark">by ticktes</button>
+                            <button type="button" class="btn btn-dark" data-bs-toggle="modal"
+                                    data-bs-target="#staticBackdrop">
+                                by ticktes
+                            </button>
+
                         </div>
                     </div>
                 </div>
@@ -260,6 +265,55 @@
         </div>
     </div>
 </div>
+<div class="section-header" style="text-align: center; margin-top: 40px">
+    <h2>CONTACT</h2>
+    <h4><i>Fan? Drop a note!</i></h4>
+</div>
+<div class="container text-center">
+    <div class="row">
+        <div class="col">
+        <p>
+            <i class="fa-solid fa-messages"></i>Chicago, US<br>
+            Phone: +00 151515<br>
+            <i class="fa-solid fa-envelope-open-text"></i>Email: mail@mail.com
+        </p>
+        </div>
+        <div class="col" >
+            <form class="row g-3" >
+                <div class="col-md-6">
+                    <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Name">
+                </div>
+                <div class="col-md-6">
+                    <div class="input-group">
+                        <input type="text" class="form-control" id="validationDefaultUsername"  aria-describedby="inputGroupPrepend2"  placeholder="Email" required>
+                    </div>
+                </div>
+                <div class="col-md-12">
+                    <input type="text" class="form-control" id="validationDefault03"  aria-describedby="inputGroupPrepend2"  placeholder="Message" required>
+                </div>
+                <div class="col-12" style="text-align:right">
+                    <button class="btn btn-primary" type="submit">SEND</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+</div>
+<div class="img-last" >
+    <img style="width: 100%; height:500px" src="https://www.w3schools.com/w3images/map.jpg" alt="ìeịed">
+</div>
+<div class="card-footer bg-transparent border-success" style="text-align: center;margin-top: 20px;width: 100%">
+    <i class="fa-brands fa-facebook-f"></i>
+    <i class="fa-brands fa-facebook-messenger"></i>
+    <i class="fa-solid fa-command"></i>
+    <i class="fa-brands fa-facebook-f"></i>
+    <i class="fa-brands fa-facebook-messenger"></i>
+    <div class="text-last">
+        <p>Powered by</p><a href="file:///Users/trungnt-m1/Sources/learn%20html/index.html">du án</a>
+    </div>
+
+</div>
+
 <script src="https://kit.fontawesome.com/4d0aedcc09.js" crossorigin="anonymous"></script>
 <script defer src="https://use.fontawesome.com/releases/v5.15.4/js/solid.js" integrity="sha384-/BxOvRagtVDn9dJ+JGCtcofNXgQO/CCCVKdMfL115s3gOgQxWaX/tSq5V8dRgsbc" crossorigin="anonymous"></script>
 <script defer src="https://use.fontawesome.com/releases/v5.15.4/js/fontawesome.js" integrity="sha384-dPBGbj4Uoy1OOpM4+aRGfAOc0W37JkROT+3uynUgTHZCHZNMHfGXsmmvYTffZjYO" crossorigin="anonymous"></script>s
